--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-هذا هو ملف index.html جاهز للنسخ واللصق في GitHub (أوقات العمل كلها ٦ صباحاً إلى ٦ مساءً):
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -145,6 +143,11 @@
             </div>
           </div>
 
+          <div class="text-[0.75rem] text-slate-200">
+            <span class="font-semibold text-amber-300">نوع اللحم:</span>
+            خروف بلدي • عجل بلدي • حاشي بلدي
+          </div>
+
           <div class="flex flex-wrap items-center gap-3">
             <button
               onclick="scrollToSection('products')"
@@ -241,18 +244,23 @@
         <!-- Product 1 -->
         <article class="bg-slate-950/80 border border-slate-700/80 rounded-2xl p-4 flex flex-col justify-between shadow-lg shadow-black/50">
           <div>
-            <h3 class="text-sm font-semibold mb-1">لحم نعيمي طازج – كيلو مشكل</h3>
+            <h3 class="text-sm font-semibold mb-1">لحم بلدي مشكل – بالوزن أو الذبيحة</h3>
             <p class="text-xs text-slate-300">
-              السعر (مثال): <span class="font-semibold text-amber-300">٧٥ ر.س / كجم</span>
+              السعر (مثال): <span class="font-semibold text-amber-300">١٠٠ ر.س / كجم</span>
             </p>
             <p class="text-[0.7rem] text-slate-400 mt-1">
-              مناسب للمشاوي والطبخ المنزلي، مع تقطيع مكعبات أو شرائح حسب الطلب.
+              لحم بلدي مشكل جاهز للتقطيع حسب رغبتك، مناسب للطبخ اليومي والمناسبات.
             </p>
+            <ul class="mt-2 text-[0.7rem] text-slate-300 list-disc list-inside space-y-0.5">
+              <li>ربع ذبيحة: ٤٠٠ ريال</li>
+              <li>نص ذبيحة: ٧٠٠ ريال</li>
+              <li>ذبيحة كاملة: من ١١٠٠ إلى ١٤٠٠ ريال</li>
+            </ul>
           </div>
           <div class="flex items-center justify-between mt-3 text-[0.7rem] text-slate-300">
-            <span>تقطيع: مكعبات / شرائح</span>
+            <span>تقطيع: مكعبات / شرائح / حسب الطلب</span>
             <span class="px-2 py-0.5 rounded-full bg-emerald-500/10 border border-emerald-400/60 text-emerald-200">
-              جاهز للشوي
+              جاهز للطبخ
             </span>
           </div>
         </article>
@@ -285,6 +293,10 @@
             </p>
             <p class="text-[0.7rem] text-slate-400 mt-1">
               مناسب للبرجر، الكباب، الكفتة، مع إمكانية اختيار نسبة الدهن حسب ذوقك.
+            </p>
+            <p class="text-[0.7rem] text-slate-200 mt-2">
+              بوكس الولاء <span class="font-semibold text-amber-300">١٩٩ ريال</span> يتكون من ريش ومفروم ومضغوط ومقلقل
+              وتقدر تغير حسب رغبتك.
             </p>
           </div>
           <div class="flex items-center justify-between mt-3 text-[0.7rem] text-slate-300">
